--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
                 </li>
                 {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">
+                    <a class="nav-link" href="{% url 'accounts:login' %}">
                         دخول <i class="fas fa-sign-in-alt"></i>
                     </a>
                 </li>
