--- a/accounts/templates/registration/password_change_form.html
+++ b/accounts/templates/registration/password_change_form.html
@@ -1,9 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-<form action="" method="post">
-    {% csrf_token %}
-    {{form}}
-    <input type="submit" class="btn btn-default btn-lg" value="Change password">
-</form>
+<div class="container">
+    <section class="text-center mt-5 change-password">
+        <form action="" method="post">
+            {% csrf_token %}
+            {{form.as_p}}
+            <hr>
+            {{form.new_password1.}}
+            <hr>
+            {% for x,y in form.items %}
+            {{x}} {{y}}
+            {% endfor %}
+            <input type="submit" class="btn btn-default btn-lg" value="Change password">
+        </form>
+    </section>
+</div>
 {% endblock %}
