--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,6 +1,24 @@
 *,html,body{
 	direction: rtl !important;
 	font-family: 'El Messiri', sans-serif !important;
+	-webkit-box-sizing: border-box;
+	-o-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	outline: 0;
+}
+
+input:focus::-webkit-input-placeholder{
+	opacity: 0;
+}
+input:focus::-moz-input-placeholder{
+	opacity: 0;
+}
+input:focus::-o-input-placeholder{
+	opacity: 0;
+}
+input:focus::input-placeholder{
+	opacity: 0;
 }
 
 /*start upper navbar */
@@ -61,33 +79,143 @@
 
 /* end mini slider */
 
+/***** Start accounts App *****/
+
 /* start login */
 
-.userlogin .loginbg{
-	/* -webkit-background-size: cover;
+.userjoin .userbg{
+	 -webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
-	background-size: cover; */
-	/* background-image: url('../img/login2.jpg'); */
+	background-size: cover;
+	background-image: url('../img/login2.jpg');
 }
 
-/* .userlogin .loginbg .overlay {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	z-index: 2;
-	background-color: rgb(0 0 0 / 40%);	
+/* .userjoin .userbg .userview{
+	border :1px solid darkblue;
+	padding: 150px 0;
+} */
+.userjoin .userbg .userview .accountcontent{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+	background: rgb(0 0 0 / 50%);
+    color: #fff;
+    border-radius: 20px;
+}
+
+/* .userjoin .userbg .userview .signupcontent,
+.userjoin .userbg .userview .logincontent{
+	opacity: 0;
+	z-index:1;
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
+	transition: all 0.5s ease-in-out;
+}
+
+.userjoin .userbg .userview .active{
+	opacity: 1;
+	z-index:2;
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
+	transition: all 0.5s ease-in-out;
 } */
 
-.userlogin .loginbg .loginform {
-	display: block;
-	margin: auto auto;
+.userjoin .userbg .userview .logincontent .accountbg {
+	border-top-right-radius: 20px;
+	border-bottom-right-radius: 20px;
+	color: #000000;
+}
+
+.userjoin .userbg .userview .signupcontent .accountbg {
+	border-top-left-radius: 20px;
+	border-bottom-left-radius: 20px;
+	color: #000000;
+}
+
+.userjoin .userbg .userview .accountcontent .accountbg article figure {
+	width: 100%;
+}
+.userjoin .userbg .userview .accountcontent .accountbg article figure a img {
+	width: 100%;
+}
+
+/* .userjoin .userbg .userview .accountcontent .loginform form article div:last-child input{ */
+.userjoin .userbg .userview .accountcontent .loginform form article .accountinput input{
+	padding: 10px;
 	text-align: center;
+	border: 0;
+	border-radius: 5px;
+	width: 90%;
+}
+.userjoin .userbg .userview .accountcontent .loginform form article .accountinput input.pass1{
+	margin-bottom: 1rem;
 }
 
 /* end login */
+
+/* start profile */
+
+.profile .profile-header h2 {
+	/* position: relative; */
+	display: inline-block;
+}
+
+.profile .profile-header a{
+	position: absolute;
+	top:20px;
+}
+
+.profile .profile-header a:first-of-type{
+	left: 50px;
+}
+
+.profile .profile-header a:last-of-type{
+	left: 80px;
+}
+
+.profile .profile-info {
+	width: 60%;
+	margin: 0 auto;
+}
+
+/* .profile .profile-info h2 {
+	marg
+} */
+
+.profile .profile-info .profile-info-icon {
+	font-size: 25px;
+	margin-left: 45px;
+}
+
+.profile-edit .profile-edit-info {
+	display: block;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.profile-edit .profile-edit-info div {
+	padding:0;
+}
+
+.profile-edit .profile-edit-info label{
+	cursor: pointer;
+}
+
+
+/* 
+.profile-edit .profile-edit-info input[type=submit]{
+	width: 80%;
+} */
+
+
+/* start profile */
+
+/***** End accounts App *****/
 
 /***** Start Project App *****/
 
@@ -306,5 +434,9 @@
 	margin-left : 0;
 }
 
-
+.form-control:focus {
+	border-color: #ced4da;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
 /*end override bootstrp*/
