--- a/accounts/templates/registration/password_change_done.html
+++ b/accounts/templates/registration/password_change_done.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Password changed</h2>
-
-<a href="{% url 'accounts:profile' profile_slug %}">Back to Profile</a>
+<div class="container">
+    <section class="text-center mt-5">
+        <h2>تم تغيير كلمة المرور</h2>
+        <a href="{% url 'accounts:profile' profile_slug %}">Back to Profile</a>
+    </section>
+</div>
 {% endblock %}
