--- a/accounts/templates/registration/password_change_form.html
+++ b/accounts/templates/registration/password_change_form.html
@@ -2,18 +2,19 @@
 
 {% block content %}
 <div class="container">
-    <section class="text-center mt-5 change-password">
-        <form action="" method="post">
-            {% csrf_token %}
-            {{form.as_p}}
-            <hr>
-            {{form.new_password1.}}
-            <hr>
-            {% for x,y in form.items %}
-            {{x}} {{y}}
-            {% endfor %}
-            <input type="submit" class="btn btn-default btn-lg" value="Change password">
-        </form>
+    <section class="text-center mt-5 passsword-change">
+        <header class="mb-5">
+            <h2>تغيير كلمة المرور <i class="fas fa-unlock"></i></h2>
+        </header>
+        <article class="text-center my-3 passch-form mx-auto">
+            <form action="" method="post">
+                {% csrf_token %}
+                <div class="form-group password-rules">
+                    {{form.as_p}}
+                </div>
+                <input type="submit" class="btn btn-primary btn-block" value="تغيير كلمة المرور">
+            </form>
+        </article>
     </section>
 </div>
 {% endblock %}
