finish ui, 90% ready to deploy

--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block BodyClass %}
+{% endblock BodyClass %}
+
 {% block upper-navbar %}
 {% endblock upper-navbar %}
 {% block main-navbar %}
