--- a/accounts/templates/registration/password_change_done.html
+++ b/accounts/templates/registration/password_change_done.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="container">
     <section class="text-center mt-5">
-        <h2>تم تغيير كلمة المرور</h2>
-        <a href="{% url 'accounts:profile' profile_slug %}">Back to Profile</a>
+        <h2>تم تغيير كلمة المرور بنجاح</h2>
+        <a href="{% url 'accounts:profile' profile_slug %}">العودة إلى ملفي الشخصي</a>
     </section>
 </div>
 {% endblock %}
