--- a/accounts/templates/registration/password_reset_confirm.html
+++ b/accounts/templates/registration/password_reset_confirm.html
@@ -1,32 +1,54 @@
 {% extends "base.html" %}
 
 {% block content %}
-{% if validlink %}
-<p>Please enter (and confirm) your new password.</p>
-<form action="" method="post">
-    {% csrf_token %}
-    <table>
-        <tr>
-            <td>{{ form.new_password1.errors }}
-                <label for="id_new_password1">New password:</label>
-            </td>
-            <td>{{ form.new_password1 }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.new_password2.errors }}
-                <label for="id_new_password2">Confirm password:</label>
-            </td>
-            <td>{{ form.new_password2 }}</td>
-        </tr>
-        <tr>
-            <td></td>
-            <td><input type="submit" value="Change my password" /></td>
-        </tr>
-    </table>
-</form>
-{% else %}
-<h1>Password reset failed</h1>
-<p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.
-</p>
-{% endif %}
+<div class="container text-center">
+
+    {% if validlink %}
+    <section class="text-center mt-5 passsword-reset">
+        <header class="mb-5">
+            <h2>
+                فضلاً أدخل كلمة المرور الجديدة وقم بتأكيدها
+                <i class="fas fa-unlock"></i>
+            </h2>
+        </header>
+
+        <article class="text-center my-3 passrscon-form mx-auto">
+            <form action="" method="post">
+                {% csrf_token %}
+                <div class="input-group mb-3 reset-confirm-input">
+                    <div class="input-group-prepend">
+                        <label class="input-group-text" class="input-group-text"
+                            for="{{form.new_password1.id_for_label}}">
+                            كلمة المرور الجديدة
+                        </label>
+                    </div>
+                    {{form.new_password1}}
+                </div>
+                <!-- {{ form.new_password1.errors }} -->
+                <!-- <label for="id_new_password1">كلمة المرور:</label> -->
+                <div class="input-group mb-3 reset-confirm-input">
+                    <div class="input-group-prepend">
+                        <label class="input-group-text" class="input-group-text"
+                            for="{{form.new_password2.id_for_label}}">
+                            تأكيد كلمة المرور
+                        </label>
+                    </div>
+                    {{ form.new_password2 }}
+                </div>
+                {{ form.new_password1.conditions }}
+                {{ form.new_password2.errors }}
+                <!-- <label for="id_new_password2">تأكيد كلمة المرور:</label>
+            {{ form.new_password2 }} -->
+
+                <input type="submit" class="btn btn-primary btn-block" value="تغيير كلمة المرور" />
+            </form>
+        </article>
+    </section>
+    {% else %}
+    <h1>لا يمكن استعادة كلمة المرور</h1>
+    <p> رابط استعادة كلمةالمرور غير صحيح، ربما تم استخدامه من قبل. <br>
+        <a href="{% url 'password_reset_confirm' %}"></a> فضلاً قم بطلب إعادة تعيين كلمة المرور مرة أخرى.
+    </p>
+    {% endif %}
+</div>
 {% endblock %}
