--- a/accounts/templates/registration/password_reset_done.html
+++ b/accounts/templates/registration/password_reset_done.html
@@ -1,7 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-<p>We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam
-    folder.</p>
-<a href="{% url 'login' %}">Back to login</a>
+<div class="container text-center passrst-done">
+    <header class="mt-5">
+        <h5>تم إرسال التعليمات الخاصة بتعيين كلمة المرور الخاصة بك.</h5>
+        <h5>إذا لم تصل التعليمات خلال بضع دقائق، يرجى التأكد من مجلد الرسائل غير المرغوب فيها.</h5>
+        <h5>في حالة استمرار نفس المشكلة،
+            <a href="{% url 'password_reset' %}">يرجى التأكد من صحة البريد الإلكتروني المدخل البريد الإلكتروني
+                المدخل</a>
+        </h5>
+    </header>
+
+    <a class="btn btn-primary btn-block" href="{% url 'login' %}">العودة لتسجيل الدخول</a>
+</div>
 {% endblock %}
