--- a/accounts/templates/registration/password_reset_form.html
+++ b/accounts/templates/registration/password_reset_form.html
@@ -1,12 +1,28 @@
 {% extends "base.html" %}
 
 {% block content %}
-<form action="" method="post">
-  {% csrf_token %}
-  {% if form.email.errors %}
-  {{ form.email.errors }}
-  {% endif %}
-  <p>{{ form.email }}</p>
-  <input type="submit" class="btn btn-default btn-lg" value="Reset password">
-</form>
+<div class="container">
+  <section class="text-center mt-5 passsword-reset">
+    <header class="mb-5">
+      <h2>استعادة كلمة المرور <i class="fas fa-unlock"></i></h2>
+    </header>
+    <article class="text-center my-3 mx-auto">
+      <form action="" method="post">
+        {% csrf_token %}
+        {% if form.email.errors %}
+        {{ form.email.errors }}
+        {% endif %}
+        <div class="input-group mb-3 reset-form-input">
+          <div class="input-group-prepend">
+            <label class="input-group-text" class="input-group-text" for="{{form.email.id_for_label}}">
+              @
+            </label>
+          </div>
+          {{ form.email }}
+        </div>
+        <input type="submit" class="btn btn-primary btn-block" value="استعادة">
+      </form>
+    </article>
+  </section>
+</div>
 {% endblock %}
