--- a/accounts/templates/registration/password_reset_complete.html
+++ b/accounts/templates/registration/password_reset_complete.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>The password has been changed!</h1>
-<p><a href="{% url 'login' %}">log in again?</a></p>
+<div class="container">
+    <section class="text-center mt-5">
+        <h2>تم تغيير كلمة المرور بنجاح</h2>
+        <a href="{% url 'login' %}">تسجيل الدخول</a>
+    </section>
+</div>
 {% endblock %}
