--- a/accounts/templates/registration/password_reset_email.html
+++ b/accounts/templates/registration/password_reset_email.html
@@ -1,2 +1,3 @@
-Someone asked for password reset for email {{ email }}. Follow the link below:
+لقد طلبت إعادة تعيين كلمة المرور للإيميل التالي {{email}}. قم باالضغط على الرابط التالي:
+
 {{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
