--- a/accounts/templates/registration/signup.html
+++ b/accounts/templates/registration/signup.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block BodyClass %}
+{% endblock BodyClass %}
+
 {% block upper-navbar %}
 {% endblock upper-navbar %}
 {% block main-navbar %}
@@ -59,6 +62,16 @@
 
                             </footer>
                         </form>
+                        {% if signup_form.errors.username or signup_form.errors.password2 %}
+                        <div class="badge badge-light mt-4 pt-3 pl-4">
+                            <span>
+                                {{signup_form.errors.username}}
+                            </span>
+                            <span>
+                                {{signup_form.errors.password2}}
+                            </span>
+                        </div>
+                        {% endif %}
                     </div>
                     <div class="col-md-5 bg-light accountbg p-5">
                         <article>
