--- a/static/css/app.css
+++ b/static/css/app.css
@@ -8,6 +8,16 @@
 	outline: 0;
 }
 
+body.main-body {
+	position: relative;
+	min-height: 100vh;
+	padding-bottom: 100px;
+}
+
+label {
+	cursor: pointer;
+}
+
 input:focus::-webkit-input-placeholder{
 	opacity: 0;
 }
@@ -214,7 +224,7 @@ input:focus::input-placeholder{
 
 /* start profile */
 
-/**/
+/* Start Password Forms */
 
 .passsword-change .passch-form {
 	width: 90%;
@@ -225,13 +235,28 @@ input:focus::input-placeholder{
 	margin-left: 0;
 }
 
+.passsword-reset .passrscon-form ul,
 .passsword-change .passch-form .password-rules ul {
     width: fit-content;
     font-weight: bold;
-    color: #800;
+    /* color: #800; */
     text-align: right;
     list-style-type: disclosure-closed;
 }
+/* .passsword-change .passch-form .password-rules ul.errorlist,
+.passsword-reset .passrscon-form ul.errorlist { */
+ul.errorlist {
+    color: #800;
+}
+
+.passrst-done header h5 {
+	line-height: 2.5rem;
+}
+
+.passrscon {
+	width: 90%;
+}
+
 /**/
 
 /***** End accounts App *****/
@@ -445,7 +470,16 @@ input:focus::input-placeholder{
 
 /* start service_details */
 
-/***** Start Service App *****/
+/***** End Service App *****/
+
+
+/***** End Main Footer *****/
+.main-footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
+/***** End Main Footer *****/
 
 /*start override bootstrp*/
 .am-row {
