--- a/accounts/templates/registration/signup.html
+++ b/accounts/templates/registration/signup.html
@@ -15,47 +15,50 @@
         <article class="mx-0 userview">
             <div class="container">
                 <div class="row accountcontent signupcontent">
-                    <div class="col-md-7 my-auto loginform p-5">
+                    <div class="col-lg-7 my-auto loginform p-5">
                         <header class="mb-5">
                             <h3>أنشئ حسابك الآن &hearts;</h3>
                         </header>
                         <form method="POST">
                             {% csrf_token %}
                             <article class="form-group row mb-4">
-                                <div class="col-md-1 mt-1">
+                                <div class="col-2 col-lg-1 mt-1">
                                     <label for="{{signup_form.username.id_for_label}}">
                                         <i class="fas fa-user fa-2x" style="cursor: pointer;"></i>
                                     </label>
                                 </div>
-                                <div class="col-md-11 accountinput">
+                                <div class="col-10 col-lg-11 accountinput">
                                     {{ signup_form.username }}
                                 </div>
                             </article>
                             <article class="form-group row mb-4">
-                                <div class="col-md-1 mt-4">
+                                <div class="col-2 col-lg-1 mt-4">
                                     <label for="{{signup_form.password1.id_for_label }}">
                                         <i class="fas fa-lock fa-2x" style="cursor: pointer;"></i>
                                     </label>
                                 </div>
-                                <div class="col-md-11 accountinput">
+                                <div class="col-10 col-lg-11 accountinput">
                                     {{ signup_form.password1 }}
                                     {{ signup_form.password2 }}
                                 </div>
                                 <!-- <label for="{{form.password.id_for_label }}">كلمة المرور:</label> -->
                             </article>
                             <article class="form-group row mb-4">
-                                <div class="col-md-1 mt-1">
+                                <div class="col-2 col-lg-1 mt-1">
                                     <label for="{{signup_form.email.id_for_label}}">
                                         <i class="fas fa-at fa-2x" style="cursor: pointer;"></i>
                                     </label>
                                 </div>
-                                <div class="col-md-11 accountinput">
+                                <div class="col-10 col-lg-11 accountinput">
                                     {{ signup_form.email }}
                                 </div>
                             </article>
                             <footer>
-                                <input class="btn btn-primary btn-lg btn-block mt-5" type="submit" value="تسجيل"
+                                <input class="btn btn-primary btn-lg btn-block my-5" type="submit" value="تسجيل"
                                     name="signup">
+                                <p class="mediashow">
+                                    لديك حساب مسبقا؟ <a href="{% url 'accounts:login' %}">تسجيل الدخول</a>
+                                </p>
                                 {% if errors %}
                                 <p>Someting wrong</p>
                                 {% endif %}
@@ -63,7 +66,7 @@
                             </footer>
                         </form>
                         {% if signup_form.errors.username or signup_form.errors.password2 %}
-                        <div class="badge badge-light mt-4 pt-3 pl-4">
+                        <div class="badge badge-light pt-3 pl-4">
                             <span>
                                 {{signup_form.errors.username}}
                             </span>
@@ -73,7 +76,7 @@
                         </div>
                         {% endif %}
                     </div>
-                    <div class="col-md-5 bg-light accountbg p-5">
+                    <div class="col-lg-5 bg-light accountbg p-5">
                         <article>
                             <figure class="mb-5">
                                 <a target="_blank" href="/">
